Update 09-azure-pipelines.yml for Azure Pipelines

--- a/09-azure-pipelines.yml
+++ b/09-azure-pipelines.yml
@@ -21,7 +21,7 @@ stages:
     - task: Docker@2
       inputs:
         containerRegistry: 'dockerhub1'
-        repository: 'max0423\min28'
+        repository: 'max0423/min28'
         command: 'buildAndPush'
         Dockerfile: '**/Dockerfile'
         tags: '$(tag)'
